[package]
name = "yes_no_security"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
z3 = "0.12"
regex = "1.9"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
proptest = "1.3"
quickcheck = "1.0"
